added new valve type fixed logic error in water sensor
